assets/css/styles.css
body {
  font: 400 15px/1.8 Lato, sans-serif;
  color: #777;
  background-color: #dedede;
}

/* Carousel: */
.carousel-inner img {
  margin: auto;
}

/*some nav styling*/
.nav-tabs li a {
  color: #777;
}

.brand {
  color:white;
  padding-right: 5px;
}
.brand:hover {
color:grey;
}

a.xnav-tabs {
  color: #32325d;
  text-decoration: none;
  background-color: aliceblue ;
}

.xnav-tabs .xnav-link.active {
  color: #d6dfe7;
  background-color: #343a40;
  border-color: rgb(70, 13, 228) #dee2e6 rgb(15, 18, 58);
  box-shadow: 0px -2px 2px 1px #000;
}

/* cards on index page*/ 
.card_container {
    display: flex;
    -webkit-display: box;
    -moz-display: box;
    -ms-display: flexbox;
    -webkit-display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;    
}

.cards {
  display: flex;
  padding: 1rem;
  margin-bottom: 2rem;
  width: 100%;    
}

@media (min-width: 40rem) {
  .cards {     
    width: 50%;   
}
  
}
@media (min-width: 56rem) {
  .cards {     
    width: 33.3%; 
  }
}

.card-item {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  width: 100%;
  border-radius: 6px;
  box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
  overflow: hidden;
  transition: transform 0.5s;
  -webkit-transition: transform 0.5s;
}
.card-item:hover {
    cursor: default;
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
    opacity: 1.0;            
}

.card-info {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  padding: 1rem;
  line-height: 1.5em;
}

.card-title {
  font-size: 25px;
  line-height: 1.1em;
  color: #32325d;
  margin-bottom: 0.2em;
}

.card-image{
  height: 200px;
  overflow: hidden;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 6px 6px 0px 0px;
  opacity: 0.2;
}

.card-image:hover{
  transition: opacity 1s;
-webkit-transition: opacity 1s;
  opacity: 1.0;
}

/* styling above/below certain elements */
.spacer_above {
  padding-top:2rem;
}

.spacer_above_sm {
    padding-top:1rem;
}
.spacer_below_sm {
    padding-bottom:1rem;
}
.icon_spacer {
    padding:0px 6px 0px 2px;
}
.hrule_above{
    border-top: solid 2px black;
}

.hrule_below {
    border-bottom: solid 2px black;
}

/*footer styling*/
footer {
    background-color: #343a40;
    color: #f5f5f5;
    padding: 5px 0px 0px 0px;
}
footer a {
    color: #f5f5f5;
}

footer a:hover {
    color: #777;
    text-decoration: none;
}  

#back2Top {
  width: 40px;
  line-height: 40px;
  overflow: hidden;
  z-index: 999;
  display: none;
  cursor: pointer;
  -moz-transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
  -o-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  position: fixed;
  bottom: 50px;
  right: 0;
  background-color: #DDD;
  color: #555;
  text-align: center;
  font-size: 30px;
  text-decoration: none;
}
#back2Top:hover {
  background-color:#343a40;
  color: #dedede;
}

#lab_social_icon_footer {
    padding: 20px 0;
    background-color: #dedede;
}
  
#lab_social_icon_footer a {
    color: #343a40;
}
  
#lab_social_icon_footer .social:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -o-transform: scale(1.1);
}
  
#lab_social_icon_footer .social {
    -webkit-transform: scale(0.8);
    /* Browser Variations: */   
    -moz-transform: scale(0.8);
    -o-transform: scale(0.8);
    -webkit-transition-duration: 0.5s;
    -moz-transition-duration: 0.5s;
    -o-transition-duration: 0.5s;
}
/*Multicoloured Hover Variations*/
  
#lab_social_icon_footer #social-fb:hover {
    color: #4267B2;
}

#lab_social_icon_footer #social-git:hover {
    color: #000;
}

#lab_social_icon_footer #social-li:hover {
    color: #0A66C2;
}
  
#lab_social_icon_footer #social-tw:hover {
    color: #1DA1F2;
}
  
#lab_social_icon_footer #social-gp:hover {
    color: #d34836;
}
  
#lab_social_icon_footer #social-em:hover {
    color: #d34836;
}

/* Contact Form required*/
.form-control.force {
    border-color: #dc3545;    
}

/*image styles*/
.img_container {
  display: flex;
  flex-wrap: wrap;
  width: 90%;
  margin: 0 auto;
  justify-content: space-between;
}

.img_item {
  display:block;
  flex-basis: 50%;
  padding: 10px;
  box-sizing: border-box;
  box-shadow: silver;
}

/* three images per line when browser width exceeds 960px */
@media only screen and (min-width: 960px) {
  .img_item {
    flex-basis: 33.333%;
  }
}
 
/* four images per line when browser width exceeds 1280px */
@media only screen and (min-width: 1280px) {
  .img_item {
    flex-basis: 25%;
  }
}
 
/* five images per line when browser width exceeds 1600px */
@media only screen and (min-width: 1600px) {
  .img_item {
    flex-basis: 20%;
  }
}

.imgrow {
  display: flex;  
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.imgcolumn {  
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 760px) {
  .imgcolumn {    
    flex: 50%;
    max-width: 50%;
  }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .imgcolumn {    
    flex: 100%;
    max-width: 100%;
  }
}

.imgcolumn img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}

/* button styling*/
.btn {
  padding: 10px 20px;
  background-color: #333;
  color: #f1f1f1;
  border-radius: 0;
  transition: .2s;
}
.btn:hover, .btn:focus {
  border: 1px solid #333;
  background-color: #fff;
  color: #000;
}


/*flex styling*/
.flex-container {
  display: flex;
  flex-wrap: wrap;
}

.flex-item-image {  
  padding: 10px;
  flex: 50%;
  text-align: center;
}

.flex-item-text {  
  padding: 10px;
  flex: 50%;
}

/* Responsive layout - makes a one column-layout instead of a two-column layout */
@media (max-width: 760px) {
  .flex-item-image, .flex-item-text {
    flex: 100%;
  }
}

